examples/test/testpolicy18873.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18873
  namespace: namespace40
spec:
  podSelector:
    matchLabels:
      key27: value29
      key30: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value49
          key33: value45
          key1: value13
      podSelector:
        matchLabels:
          key15: value29
          key48: value37
          key13: value7
